# pylywsdxx

./: .pylintrc  CONTRIBUTING.md  LICENSE  README.md  build  environment.yml  mkbld  pyproject.toml  tox.ini
.github/: dependabot.yml
examples/: lywsd02.py  lywsd03mmc.py  lywsd03mmc2csv.py  managedlywsd.py  pylywsd02.py  pylywsd03mmc.py  pylywsd03mmc2csv.py
pylywsdxx/: __init__.py  device.py  manager.py  radioctl.py
src/pylywsdxx/: __init__.py  bt_hardware.py  client.py  client2.py  client3.py  device.py  manager.py  radioctl.py
src/scripts/: lywsd02.py  lywsd03mmc  lywsd03mmc.py  lywsd03mmc2csv  lywsd03mmc2csv.py
