# Project: pylywsdxx

# Hatchling  https://packaging.python.org/en/latest/key_projects/#hatch
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pylywsdxx"
description = "A Python3 class to interrogate Xiaomi Mijia LYWSD* sensors."
#version = "2.2.1"  # latest/current distribution version
version = "2.3.2"  # latest test version
dependencies = [
    "bluepy3",
]
license = "MIT"
authors = [
  { name="Mausy5043" },
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation"
]

[project.urls]
"Homepage" = "https://github.com/Mausy5043/pylywsdxx"
"Bug Tracker" = "https://github.com/Mausy5043/pylywsdxx/issues"

[tool.hatch.build]
include = [
    "pylywsdxx/*.py",
    "pylywsdxx/py.typed",
]

[tool.autopep8]
max_line_length = 98
in-place = true
recursive = true
aggressive = 1

[tool.bandit]
skips = []

[tool.black]
line-length = 98
target-version = ["py39", "py310", "py311", "py312"]

[tool.flake8]
max_line_length = 98
ignore = [
# function too complex: is what we do ;-)
    "C901",
 # line too long: is checked by pylint
    "E501",
# line break before binary: is against policy.
    "W503",
]

[tool.pydocstyle]
inherit = false
convention = 'google'
match = '.*\\.py'
add-ignore = 'D'

[tool.mypy]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
check_untyped_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_untyped_calls = true
no_implicit_reexport = true
extra_checks = true
